<resources>
    <string name="app_name">Pocket Tally</string>

    <!--How to play instructions-->

    <string name="game_objective_header">Game Objective</string>
    <string name="game_objective_body">Cricket is typically played between 2, 3 or 4 players, or teams of players. The goal of cricket is to be the first player to close all the cricket numbers and have a higher or even point total.</string>

    <string name="cricket_numbers_header">Cricket Numbers</string>
    <string name="cricket_numbers_body">Cricket uses the numbers 15 to 20 and the bull\'s-eye. To close a number, it must have been scored 3 times in any fashion, on one or more turns. Hitting the triple will close a number in one throw; a single and the double will close it in two throws or three singles will close it in three throws. Numbers do not have to be closed in any particular order and several numbers can be hit in the same turn. Hitting a number once is shown by placing a slash (/) beside the number, second hit by turning the slash to an X, and the third by a circle (O) around the X.</string>

    <string name="game_start_header">Game Start</string>
    <string name="game_start_body">To start the game, each player or one player from each team throws one dart. This is known as the "diddle". The player whose dart lands closest to the center goes first. Generally, if both players darts are in the same section of the bull's eye or in the event of a tie, each player throws another dart until there is an obvious winner. </string>

    <string name="game_play_header">Game Play</string>
    <string name="game_play_body">During a player\'s turn, the player throws three darts. After the last dart, the player\'s score is totaled. Any number that has not been hit three times (cumulative across all turns) by a player is neither open for that player nor closed (if currently open for the opponent). </string>


    <!--Player Fragment-->

    <string name="player_name_hint">Name</string>


    <!--cricket number marker labels-->

    <string name="marker_20_tv">20</string>
    <string name="marker_19_tv">19</string>
    <string name="marker_18_tv">18</string>
    <string name="marker_17_tv">17</string>
    <string name="marker_16_tv">16</string>
    <string name="marker_15_tv">15</string>


    <!--darts game activity content description-->

    <string name="bull_s_eye_label">Bull\'s eye label</string>


    <!--Menu selection strings-->

    <string name="menu_option_game_settings">Game Settings</string>
    <string name="menu_option_profile">Profile</string>
    <string name="menu_how_to_play">How to Play</string>

    <!--Menu titles-->

    <string name="icon_text_size">Text Size</string>


    <!--avatar dialog Strings-->
    <string name="choose_your_avatar">Choose your avatar</string>

    <!--avatar dialog Content Descriptions-->
    <string name="avatar_man_content_descrip">avatar man</string>
    <string name="avatar_man_1_content_descrip">avatar man 1</string>
    <string name="avatar_man_2_content_descrip">avatar man 2</string>
    <string name="avatar_man_3_content_descrip">avatar man 3</string>
    <string name="avatar_man_4_content_descrip">avatar man 4</string>
    <string name="avatar_man_5_content_descrip">avatar man 5</string>
    <string name="avatar_man_6_content_descrip">avatar man 6</string>
    <string name="avatar_woman_content_descrip">avatar woman</string>
    <string name="avatar_woman_1_content_descrip">avatar woman 1</string>

    <!--player fragment content description-->
    <string name="avatar_content_description_man">Man Avatar</string>
    <string name="tally_marker_20_content_decrip">20 tally marker</string>
    <string name="tally_marker_19_content_decrip">19 tally marker</string>
    <string name="tally_marker_18_content_decrip">18 tally marker</string>
    <string name="tally_marker_17_content_decrip">17 tally marker</string>
    <string name="tally_marker_16_content_decrip">16 tally marker</string>
    <string name="tally_marker_15_content_decrip">15 tally marker</string>
    <string name="tally_marker_bullseye_content_decrip">bull\'s eye tally marker</string>

    <!--player fragment strings-->
    <string name="initial_total_score_tv">0</string>

    <!--Game Settings Preferences-->
    <string name="game_settings_label">Game Settings</string>

    <string name="pref_num_of_players_key" translatable="false">number of players</string>
    <string name="pref_num_of_players_default" translatable="false">2 </string>
    <string name="pref_num_of_players_label"> Number of Players </string>

    <string name="pref_game_init_key" translatable="false">game initialized</string>

    <string name="pref_2_players_label"> 2 players </string>
    <string name="pref_3_players_label"> 3 players </string>
    <string name="pref_4_players_label"> 4 players </string>

    <string name="pref_num_of_players_2">2 </string>
    <string name="pref_num_of_players_3">3 </string>
    <string name="pref_num_of_players_4">4 </string>

    <string name="pref_game_mode_key" translatable="false"> game mode </string>
    <string name="pref_game_mode_default" translatable="false"> standard </string>
    <string name="pref_game_mode_label"> Game Mode </string>

    <string name="pref_standard_game_mode_label"> Standard </string>
    <string name="pref_cut_throat_game_mode_label"> Cut Throat </string>
    <string name="pref_no_points_game_mode_label"> No Points </string>

    <string name="pref_standard_game_mode_value"> standard </string>
    <string name="pref_cut_throat_game_mode_value"> cut throat </string>
    <string name="pref_no_points_game_mode_value"> no points </string>

    <string name="pref_vibrate_label"> Vibrate On/Off </string>
    <string name="pref_vibrate_key"> vibrate </string>
    <string name="pref_vibrate_show_on"> On </string>
    <string name="pref_vibrate_show_off"> Off </string>
    <string name="reset_game_button">Reset Game</string>
    <string name="undo_throw_button">Undo throw</string>
    <string name="default_starting_score">0</string>

    <!--End of game messages-->
    <string name="end_game_message">Game Over</string>
    <string name="winning_player">Everybody Wins!</string>
    <string name="play_again_button">Play again</string>

    <!--string for admob-->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>

    <!--widget strings-->
    <string name="last_game_winner">Last Game Winner</string>

</resources>
