<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/choose_your_avatar"
        android:textColor="@color/buttonRed1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/avatar_man"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:src="@mipmap/man"
        app:layout_constraintStart_toStartOf="@+id/avatar_man_3"
        app:layout_constraintTop_toBottomOf="@+id/avatar_man_3"
        android:contentDescription="@string/avatar_man_content_descrip"/>


    <ImageView
        android:id="@+id/avatar_man_1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:src="@mipmap/man_1"
        app:layout_constraintStart_toEndOf="@+id/avatar_man"
        app:layout_constraintTop_toTopOf="@+id/avatar_man"
        android:contentDescription="@string/avatar_man_1_content_descrip"/>


    <ImageView
        android:id="@+id/avatar_man_2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:src="@mipmap/man_2"
        app:layout_constraintStart_toEndOf="@+id/avatar_man_1"
        app:layout_constraintTop_toTopOf="@+id/avatar_man_1"
        android:contentDescription="@string/avatar_man_2_content_descrip"/>

    <ImageView
        android:id="@+id/avatar_man_3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:src="@mipmap/man_3"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:contentDescription="@string/avatar_man_3_content_descrip"/>

    <ImageView
        android:id="@+id/avatar_man_4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:src="@mipmap/man_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avatar_man_2"
        app:layout_constraintTop_toTopOf="@+id/avatar_man_2"
        android:contentDescription="@string/avatar_man_4_content_descrip"/>

    <ImageView
        android:id="@+id/avatar_man_5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/avatar_man_5_content_descrip"
        android:src="@mipmap/man_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/avatar_man"
        app:layout_constraintTop_toBottomOf="@+id/avatar_man" />

    <ImageView
        android:id="@+id/avatar_man_6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:src="@mipmap/man_6"
        app:layout_constraintStart_toEndOf="@+id/avatar_man_5"
        app:layout_constraintTop_toTopOf="@+id/avatar_man_5"
        android:contentDescription="@string/avatar_man_6_content_descrip"/>

    <ImageView
        android:id="@+id/avatar_woman"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:src="@mipmap/woman"
        app:layout_constraintBottom_toBottomOf="@+id/avatar_woman_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/avatar_woman_1"
        app:layout_constraintTop_toTopOf="@+id/avatar_woman_1"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/avatar_woman_content_descrip"/>

    <ImageView
        android:id="@+id/avatar_woman_1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:src="@mipmap/woman_1"
        app:layout_constraintBottom_toBottomOf="@+id/avatar_man_6"
        app:layout_constraintStart_toEndOf="@+id/avatar_man_6"
        app:layout_constraintTop_toTopOf="@+id/avatar_man_6"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/avatar_woman_1_content_descrip"/>

</android.support.constraint.ConstraintLayout>