<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/small_vertical_margin">


    <TextView
        android:id="@+id/game_over_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/end_game_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/endGameDialog"/>


    <TextView
        android:id="@+id/winning_player_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/winning_player"
        app:layout_constraintEnd_toEndOf="@+id/game_over_tv"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="@+id/game_over_tv"
        app:layout_constraintTop_toBottomOf="@+id/game_over_tv"
        style="@style/endGameDialog"/>

    <Button
        android:id="@+id/play_again_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_button"
        android:text="@string/play_again_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/winning_player_tv"
        app:layout_constraintStart_toStartOf="@+id/winning_player_tv"
        app:layout_constraintTop_toBottomOf="@+id/winning_player_tv"
        app:layout_constraintVertical_bias="0.284" />

</android.support.constraint.ConstraintLayout>